test_outputs/connlist/netpol_named_port_test_explain_output.txt

##########################################
# Specific connections and their reasons #
##########################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255 => helloworld/pod-a[Deployment]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy helloworld/enable-ingress-from-named-port selects helloworld/pod-a[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Ingress rule

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between helloworld/new-pod[Deployment] => helloworld/pod-a[Deployment]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy helloworld/enable-ingress-from-named-port // Ingress rule #1 (named ports of the rule have no match in the configuration of the dst peer)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between helloworld/pod-a[Deployment] => 0.0.0.0-255.255.255.255:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy helloworld/enable-ingress-from-named-port selects helloworld/pod-a[Deployment], but 0.0.0.0-255.255.255.255 is not selected by any Egress rule - no rules defined
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between helloworld/pod-a[Deployment] => helloworld/new-pod[Deployment]:

Denied connections:
	Denied TCP, UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy helloworld/enable-ingress-from-named-port selects helloworld/pod-a[Deployment], but helloworld/new-pod[Deployment] is not selected by any Egress rule - no rules defined
		Ingress (Allowed) due to the system default (Allow all)


#########################################################
# All Connections due to the system default (Allow all) #
#########################################################
0.0.0.0-255.255.255.255 => helloworld/new-pod[Deployment]
helloworld/new-pod[Deployment] => 0.0.0.0-255.255.255.255
